[package]
name = "beater"
version = "0.1.0"
edition = "2021"
description = "A program to download songs directly from Spotify"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
librespot-core = { git = "https://github.com/beater-rs/librespot", branch = "new-api" }
librespot-audio = { git = "https://github.com/beater-rs/librespot", branch = "new-api" }
librespot-discovery = { git = "https://github.com/beater-rs/librespot", branch = "new-api" }
librespot-metadata = { git = "https://github.com/beater-rs/librespot", branch = "new-api" }
http = "0.2"
hyper = { version = "0.14", features = ["stream"] }
futures-util = "0.3"
url = "2.2"
once_cell = "1.12"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# cli dependencies
tokio = { version = "1.18", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
clap = { version = "3.1", features = ["cargo"], optional = true }
dirs = { version = "4.0", optional = true }
toml = { version = "0.5", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"

[[bin]]
name = "beater"
path = "src/bin/main.rs"
required-features = ["bin"]

[features]
bin = ["tokio", "clap", "dirs", "toml", "tracing-subscriber"]

[profile.release]
opt-level = 3
lto = true
strip = true
